[gd_scene load_steps=9 format=3 uid="uid://dk244euyfs4no"]

[ext_resource type="Script" path="res://scenes/prologue.gd" id="1_5l4ht"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="2_ikcb3"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="3_rnfcg"]
[ext_resource type="Texture2D" uid="uid://ctigr7scd0wk4" path="res://assets/img/vesper test.png" id="4_pl851"]
[ext_resource type="PackedScene" uid="uid://m47064cxfa3k" path="res://scenes/transitions.tscn" id="5_vp208"]

[sub_resource type="CanvasTexture" id="CanvasTexture_42q2i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4t0yw"]
bg_color = Color(0.623529, 0.164706, 0.152941, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.388235, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_btlhh"]

[node name="Prologue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5l4ht")

[node name="SceneTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharScene" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = 451.0
offset_top = 5.0
offset_right = 1516.0
offset_bottom = 1604.0
texture = ExtResource("4_pl851")
expand_mode = 1

[node name="BlackScreen" type="TextureRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_42q2i")

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("3_rnfcg")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("2_ikcb3")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "<null>"
messages = Array[String](["Having graduated at the top of your class, the idea of working your whole life in a meaningless job in a small town never settled with you.", "Unfortunately, you knew that leaving your steady job to find work somewhere else would be a big risk. With no one else to help you financially, it took a lot of effort to make ends meet.", "You had always dreamed of moving away from your hometown, to a place where you could reinvent yourself, somewhere you could start anew.", "However, the company you worked for didn’t approve of their employees searching for jobs elsewhere. So, you had to be cautious, sending only a handful of résumés over the years.", "The few people you confided in told you to stop chasing the unobtainable and to make the best of what you had. But you didn’t heed their advice. You never did.", "Until you finally had a stroke of luck and were offered a part-time job writing for The Grimshire Tribune. It paid much less, but it was your only chance to move to the big city.", "Armed with nothing but a dream and ambition, you gladly left your old life behind and arrived in Grimshire, the city everyone wants to be in, with a population of more than a million residents.", "Famous for its huge parks, luxurious nightlife, and the often-ignored red-light district, the city comes with tremendous perils and opportunities.", "A few months in and you have gotten used to the pace of the big city.", "Thankfully, your boss is indifferent when it comes to clock-punching rules, as long as you can meet his deadlines. It's a perfect situation for an introverted, reclusive writer like yourself.", "You’re happy with your new life in Grimshire, but writing brief articles was never your dream job. Finally having time to spare, you soon begin to dive into the world of investigative journalism.", "That's when it comes to your attention that Grimshire has been experiencing unusual kidnappings during the past few months.", "All of the victims so far were young women, and they all vanished without a trace in the middle of the night.", "The police tried to tie the girls' cases together - the places they had visited - the people they met, but it all came up empty.  ", "Several days after their disappearances, the victims’ families were devastated when their loved ones were continually being discovered lifeless in different locations throughout town.", "The coroners performed exhaustive evaluations of the corpses. But they could not account for the puzzling absence of blood", "These last weeks, you have plunged yourself deep into this research hoping the police overlooked something important. But they haven’t been slacking either.", "The reason behind their exceptional efforts, you believe, is that the first victim to disappear was Helena Bergman, the former mayor's daughter.", "Her disappearance is the most mysterious of all. Not only was her body not found, but she was also the only one to vanish in broad daylight.", "For days everyone thought Helena had simply fled. But when the kidnappings started and she didn't show up anywhere, the police feared the worst.", "The security camera footage showed Helena left the family's property willingly, carrying nothing but a suitcase with her favorite clothes. On further investigation, it was discovered that all her bank accounts had also been wiped clean.", "It didn’t come as a surprise that her family wasn’t too cooperative, given that months before, the Bergman family had been embroiled in a major scandal involving Helena's father, which ultimately led to his resignation from office.", "Helena finally gathered the courage to come forward as a victim of her father's sexual abuse. However, her mother alleged that the girl had mental health issues and that such incidents never occurred in their household.", "You ask yourself the same questions the police have asked themselves a thousand times:", "???: Where is Helena? Is the girls' disappearance linked to hers?", "But, you know asking the wind won't get you any results.", "Ultimately, the police were forced to file Helena's case as a missing person rather than a kidnapping. Unsurprisingly, her family hasn't shown any interest in offering a reward for information concerning her whereabouts.", "But something tells you to keep investigating, to keep asking around.", "Vesper: Someone must have seen her, helped her. People don’t simply vanish into thin air. A tall, good-looking young woman is bound to call people’s attention.", "So instead of guessing where she is now, you spent your time retracing her steps and asking around. The more you research about Helena, the more you realize she’s everything you’re not.", "By all accounts, she was funny, sociable, and charismatic. Whereas you avoided human contact, people naturally gathered around her.", "Vesper: It would be nearly impossible to track all her movements. She was everywhere, she talked to everyone. Every week she went to a different party.", "However, you wouldn’t let a small thing like that stop you. Once you're driven to do something, you see it to the end.", "As much as you hate parties, you forced yourself to go undercover. Imagining that young people would be more open to sharing information with a young girl like yourself than with the police.", "And you were right.", "You met lots of people who knew Helena. And they all had splendid things to say about her. As each day passed by you couldn’t help but feel closer to her.", "Curious to know where she spent most of her time, you even asked Helena's family to visit her bedroom at the newspaper’s behest.", "As you had expected, her mom was cold and distant, leaving you alone to wander like you weren’t even in the house.", "Lying on Helena's wide, luxurious bed, you wondered how she must’ve felt all these years alone in this place. Her room felt lifeless and still without her presence.", "When her mother finally came to ask you to leave she caught you skimming through one of Helena’s old notebooks. You thought she’d be angry at you for snooping around, but she didn’t care.", "It seemed like she wasn’t interested at all in finding out about her daughter’s whereabouts, all she wanted was to take her afternoon beauty sleepy.", "One day as you arrive home, you find a handwritten letter in your mailbox that reads:", "Oak Bridge 10 PM", "Since you began investigating Helena’s case, you always felt like you were being watched. But you dismissed it as a case of mild paranoia.", "Bushes move, windows open by themselves, people stare.", "But now here is proof that you aren't going insane. Someone's been watching you, and they know where you live.", "???: Who could it be? I’m sure this isn’t Helena’s handwriting.", "???: If I go to the police I could lose the only lead I have. Plus, it's just a piece of paper, there’s no death threat, no names, nothing.", "???: Who's to say it has anything to do with Helena's case?", "???: After weeks without luck, I guess I should go meet this mysterious someone.", "???: Safe to say whoever left this message could be potentially dangerous, it may be a trap.", "???: With all the murders going on, my boss insisted on giving me a gun for protection… he warned me not to carry it around though.", "Should I take the gun with me?", "Dynamic	", "Dynamic", "You call a taxi and anxiously travel to the designated meeting place. ", "As you look out the window, your thoughts are consumed by Helena.", "???: I can’t shake the feeling that I’m getting closer to finding out what happened to her.", "After a long drive, you arrive at the bridge a little before 10 PM.", "??? It’s awfully quiet here… and I don’t see anyone nearby.", "???: I guess whoever wrote that letter is going to be late.", "???: Why am I not surprised?", "???: I'll wait for a while…", "…", "……", "You look at your cellphone, it's past 11 PM.", "???: I’m beginning to think this was just a prank.", "???: Well, since I’m already here… I’ll wait until midnight…", "…", "……", "You hear some noises in the woods.", "Vesper: What is that? Maybe they’re finally here.", "Vesper: No… It's just raccoons rummaging about.", "???: My paranoia is starting to get the best of me.", "You look at your cell phone again, hopelessly.", "???: It's already close to 1 AM. I give up. no one's coming.", "???: This was a waste of time. I'm heading home.", "You call a taxi, get in the car, and close your eyes in the backseat.", "Thoughts about Helena start to rise once again, the murders, the parties, and all the people you’ve interviewed recently.", "As you start to drift away you recall Helena’s mother and her indifference towards everything, especially her daughter.", "You try to remember your mother’s face, but it’s useless. You couldn’t have been more than a few weeks old when you were left at the orphanage’s doorstep, wrapped in your cozy little blanket, crying your lungs out.", "The day you were adopted, the matron surprised you by handing you a scribbled bloody note. It’s a good thing you memorized it since your foster parents went into your room one day and casually discarded it.", "???: (It’s been a while since I haven’t thought about that note… my first puzzle)", "“Take care of my sweet Vesper. This is the only way to keep her safe. When she’s older, please giver her this note, and tell her I love her. Thank you, Rosa.”", "???: (If she truly loved me, why didn’t she fight to stay with me?)", "???: (What kind of mother abandons her child?)", "??? (I guess I’ll never know… Matron Rosa took care of so many kids her entire life, she said it could’ve been anybody leaving me at her door)", "???: (After investigating Helena’s family and meeting her aloof mother, I wonder if I was the lucky one not to have met my father)", "???: Sure it beats being touched by that creepy mayor…", "Taxi driver: I’m sorry, did you say something?", "???: It's nothing. I’m just talking to myself.", "???: (There must be a clue somewhere, something I missed)", "While you’re lost in your thoughts once again, there’s a loud noise and the car swirls violently to the left.", "???: What was that!?", "Taxi driver: Relax, it’s just a flat tire.", "???: Alright, if you say so…", "The taxi driver goes outside mumbling something incoherent.", "Taxi driver: God dammit! This is worse than I thought!", "???: What happened?", "Taxi driver: Both tires are busted.", "???: Oh, just my luck. After three long hours of waiting for nothing. Now this.", "Taxi driver: Imagine how pissed I am. I’ve been driving for 10 hours straight. You were my last ride. ", "Taxi driver: What were you doing in this part of town at this time, anyway? There’s nothing to see here since that bridge was shut down.", "???: I keep asking myself that as well.", "Taxi driver: You know, cellphone reception here sucks. We could be waiting all night. ", "???: I don’t have all night.", "Taxi driver: Neither do I. Ms. … ?", "???: Vesper.", "Taxi driver: That’s an unusual name.", "Vesper: Well, I'm an unusual person.", "Vesper: So, what do you suggest we do?", "Taxi driver: It’s not like we have many options.", "Taxi driver: Reception should be better a few miles down the road, I’ll call us a tow truck.", "Vesper: Hey, you’re not leaving me here alone, are you!?", "Taxi driver: Do you want to tag along?", " Vesper: Not really.", "Taxi driver: I thought so… I should be back in about 30 minutes.", "Vesper: Alright, be careful.", "Taxi driver: Don't worry, there ain't no bears around these parts.", "The taxi driver leaves.", "...…", "......…", "An hour passes and there’s no sign of him.", "Vesper: Where is he anyway?", "Vesper: It's been way too long since he left. I'm starting to freak out just waiting here.", "Vesper: Do I go out to look for him or stay in the car?", "--- GO OUTSIDE  (took_gun == true) ---", "Vesper: I have a gun, people should be afraid of me, not the other way around.", "Vesper: Anyway, what is taking him so long?", "Vesper: Did he get lost or something? It’s just following a road, how hard could it be?", "A few miles from the car you spot something that resembles a person lying in the middle of the road. You draw your gun and start walking towards it. ", "Vesper: Hey! Are you okay? Do you need help?", "There’s no answer. ", "Trying to get a better look you approach closer.", "But your world is turned upside down.", "Seeing the taxi driver’s head chopped off you begin to panic.", "Vesper: Oh my god!  What the fuck happened!?", "Vesper: Did a bear do this?", "Vesper: But he said there weren’t any bears in this region. ", "Vesper: What if whatever did this is still around here?!", "From the corner of your eye you see a shadow closing in on you. ", "Realizing you’re in danger as well you feel a shiver running down your spine. ", "You hold the gun in front of you ready to shoot.", "Vesper: I have to act fast!", "-- SHOOT/FIGHT ---", "As the shadow moves closer you fire desperately at it, unloading the entire magazine.", "Partially blinded by the smoke and temporarily deaf from the gun’s noise, you hope to have hit him. ", "However, when the smoke clears you catch a glimpse of it advancing towards you. ", "Unable to stop it you feel a blow to the side of the head, landing on the floor unconscious.", "---- RUN", "You start running at full speed towards the car.", "After some time running you turn to see if the shadow’s still following you. You sigh in relief seeing it’s not there. ", "As you turn your head back to the road you realize the shadow’s right in front of you.", "You only have time to let out a scream before you’re knocked out cold.", "-- HESITATE TO SHOOT/DO NOTHING --", "You hesitate for a second.", "When you realize, the shadow’s upon you. ", "You hit the ground hard, losing consciousness.", "-- Go outside (took_gun == false) --", "You decide to go outside, assuring yourself there’s nothing to fear.", "Vesper: It’s just a stupid road in the middle of the night. The most potentially dangerous things in this area are hungry raccoons and deer.", "Vesper: Anyway, what is taking him so long?", "Vesper: Did he get lost or something? It’s just following a road, how hard could it be?", "A few miles from the car you spot something that resembles a person lying in the middle of the road.", "Vesper: Hey! Are you okay? Do you need help? ", "Step by step you get closer.", "But your world is turned upside down.  ", "Seeing the taxi driver’s head chopped off you begin to panic. ", "Vesper: Oh my god! What the fuck happened!?", "Vesper: Did a bear do this?", "Vesper: But he said there weren’t any bears in this region. ", "Vesper: What if whatever did this is still around here?!", "From the corner of your eye you see a shadow closing in on you.", "Realizing you're also in danger, you sprint back to the cab. ", "Vesper: I must be going crazy... this can't be real!", "Vesper: You’re not real!", "As you turn your head back to see if it’s still there, you realize the shadow’s right in front of you. There’s nowhere to run.", "Before you have time to let out a scream you’re knocked out cold.", "--- Stay in the car", "Vesper: I'm not about to venture in the middle of the night on a god-forsaken road. It’s safer to stay in the car.", "Vesper: I should make sure the doors are locked as well.", "You lock the doors tightly.", "A few hours have passed… but the taxi driver has not returned. ", "Clinging to the hope that the sun will rise soon you feel even more nervous.", "Vesper: Just a little longer and I can go looking for help. I’m not going out there until dawn. ", "- Scratch sound -", "Vesper: Oh shit, what is that?", "- Scratch sound intensifies -", "Vesper: I think I can hear scratches coming from the outside.", "- Dynamic -", "However, the scratches get closer.", "They seem to be coming from all around the car, you peek outside the window but all you can see is a shadow. You stop trusting your eyes.", "Vesper: This can’t be real!", "Then you hear the loudest sound in your life.", "The window explodes and a hand grabs you by the throat.", "You don’t even have time to react, you can’t breathe, you can’t think.", "As your consciousness begins to fade you feel your whole body getting cold.", "--- END ---"])
sound_files = Array[AudioStream]([null])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GunOption" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -232.0
offset_right = 100.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GunOption"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TakeGun" type="Button" parent="GunOption/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Take the gun"

[node name="DontTakeGun" type="Button" parent="GunOption/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Don't take the gun"

[node name="ProgressBarControl" type="Control" parent="GunOption/VBoxContainer/DontTakeGun"]
anchors_preset = 0
offset_left = -81.0
offset_top = -126.0
offset_right = -41.0
offset_bottom = -86.0

[node name="ProgressBar" type="ProgressBar" parent="GunOption/VBoxContainer/DontTakeGun/ProgressBarControl"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_left = 1.0
offset_top = 258.0
offset_right = 301.0
offset_bottom = 288.0
rotation = 4.71239
theme_override_styles/fill = SubResource("StyleBoxFlat_4t0yw")
max_value = 8.0
step = 1.0
value = 8.0
show_percentage = false

[node name="GunOptionTimer" type="Timer" parent="GunOption"]
wait_time = 6.0
one_shot = true

[node name="CarOption" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -232.0
offset_right = 100.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CarOption"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GotOutside" type="Button" parent="CarOption/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Outside"

[node name="DontGo" type="Button" parent="CarOption/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stay in the car"

[node name="FireOption" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -232.0
offset_right = 100.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FireOption"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="FireBtn" type="Button" parent="FireOption/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FIRE"

[node name="RunBtn" type="Button" parent="FireOption/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RUN"

[node name="FireBarControl" type="Control" parent="FireOption/VBoxContainer/RunBtn"]
anchors_preset = 0
offset_left = -81.0
offset_top = -126.0
offset_right = -41.0
offset_bottom = -86.0

[node name="FireProgressBar" type="ProgressBar" parent="FireOption/VBoxContainer/RunBtn/FireBarControl"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_left = 1.0
offset_top = 258.0
offset_right = 301.0
offset_bottom = 288.0
rotation = 4.71239
theme_override_styles/fill = SubResource("StyleBoxFlat_4t0yw")
max_value = 8.0
step = 1.0
value = 8.0
show_percentage = false

[node name="FireOptionTimer" type="Timer" parent="FireOption"]
wait_time = 8.0
one_shot = true

[node name="Transitions" parent="." instance=ExtResource("5_vp208")]
layout_mode = 1

[node name="SkipTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SkippingPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 1492.0
offset_top = 947.0
offset_right = 1710.0
offset_bottom = 992.0

[node name="SkippingLabel" type="Label" parent="SkippingPanel"]
layout_mode = 0
offset_right = 141.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 30
text = "Skipping in: "

[node name="FadeOutTrans" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CanvasTexture_btlhh")

[connection signal="pressed" from="GunOption/VBoxContainer/TakeGun" to="." method="_on_take_gun_pressed"]
[connection signal="pressed" from="GunOption/VBoxContainer/DontTakeGun" to="." method="_on_dont_take_gun_pressed"]
[connection signal="timeout" from="GunOption/GunOptionTimer" to="." method="_on_gun_option_timer_timeout"]
[connection signal="pressed" from="CarOption/VBoxContainer/GotOutside" to="." method="_on_got_outside_pressed"]
[connection signal="pressed" from="CarOption/VBoxContainer/DontGo" to="." method="_on_dont_go_pressed"]
[connection signal="pressed" from="FireOption/VBoxContainer/FireBtn" to="." method="_on_fire_btn_pressed"]
[connection signal="pressed" from="FireOption/VBoxContainer/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="timeout" from="FireOption/FireOptionTimer" to="." method="_on_fire_option_timer_timeout"]
[connection signal="timeout" from="SkipTimer" to="." method="_on_skip_timer_timeout"]
